updtaed design system page

--- a/hud.html
+++ b/hud.html
@@ -68,7 +68,7 @@
 
 			<h3>Outcome</h3>
 			<p>
-				We ultimately passed off 4 responsive mockups to a contractor for development. 
+				We ultimately passed off 4 responsive mockups to a contractor for development. The contractor built and launched the new homepage May 2021. 
 			</p>
 
 <!-- 			<p>I was brought in to organize and ensure consistency across the work another Visual Designer had already done. I built and organized over 200 scalable, custom symbols, text styles, and layer styles utilizing atomic design principles.</p> -->
@@ -211,7 +211,7 @@
 	<div class="panel" id="Symbol Creation">
 		<h2 class="body right">Outcome</h2>
 			<div class="body right">
-				<p class="p-XL">As of March 2021, a contractor is developing these pages. Eventually the entire site will use these templates.
+				<p class="p-XL">The homepage and new type styles launched in May of 2021. Eventually the entire site will use the new templates.
 				</p>
 				
 				<div class="space"></div>
