--- a/index.html
+++ b/index.html
@@ -44,10 +44,11 @@ $('#footer').load('http://emilyporat.com/footer.html');
 
       <div class="full-width" style="background-color: var(--green); margin-bottom: 0; height: 95vh">
         <div class="title-wrapper animate-reveal animate-first" style="height: 95vh">
-          <div class="title" style="color: var(--white); width: 55%">
+          <div class="title" style="width: 55%">
             <div>
-              <h4 style="color: black">Emily Porat • UX Designer • Washington DC</h4>
-              <h1 style="margin-bottom: 10px">I'm an end-to-end designer who excels at creating order from chaos</h1>
+              <h4 style="color: black">UX Designer • Washington DC</h4>
+              <h1 style="color: white">Emily Porat</h1>
+              <h2 style="margin-bottom: 10px">I'm an end-to-end designer who excels at creating order from chaos</h2>
 
               <button class="secondary-btn" style="margin-right: 10px"  onclick="location.href='projects.html';" value="View my work"; target="_blank">View my Work</button>
               <button class="btn" onclick="slideDown()" value="Scroll down">Learn More <i class="fa fa-long-arrow-alt-down"></i></button>
