made photo full width on fha

--- a/fha.html
+++ b/fha.html
@@ -311,8 +311,12 @@
 					<li>Since we were designing for a Drupal site, we would be delivering templates. We picked a representative slice of pages, ideated on layouts, and narrowed in on 5 distinct templates, shown below. We ultimately delivered 25 high-fidelity mockups, covering all L1 landing pages and most “Standalone Content” pages.</li>
 					<li>Lastly, my teammate and I put together a component-by-component documentation deck for the client. The deck includes an explanation of each component along with usage guidance and a mobile version, where applicable.  </li>
 				</ul> 
+		</div>
+	</div>
 
-			<img src="pics/FHA/templates.png" class="pic-right">
+	<div class="full-width-mid-page">
+		<div class="panel" style="background-color: #f9f9f9">
+			<img class="pic-left" src="pics/FHA/templates.png">
 		</div>
 	</div>
 
