remove projects for now

--- a/footer.html
+++ b/footer.html
@@ -7,7 +7,7 @@
     </div>
 
     <div id="footer-links">
-      <div class="contact-text">
+      <!-- <div class="contact-text">
         <h3 style="color: white">Projects</h3>
           <p><a href="health-nonprofit.html">Nonprofit Discovery</a></p>
           <p><i style="color: var(--purple)" class="fas fa-lock"></i><a href="fha.html"> Federal Website Redesign</a></p>
@@ -15,7 +15,7 @@
           <p><i style="color: var(--purple)" class="fas fa-lock"></i><a href="fms-pos.html"> Food Management System</a></p>
           <p><a href="rsvpd.html">RSVP'd</a></p>
           <p><a href="l&d.html">L&D Portal</a></p>
-      </div>
+      </div> -->
        
       <div class="contact-text">
         <h3 style="color: white">Contact</h3>
