--- a/projects.html
+++ b/projects.html
@@ -45,16 +45,15 @@
             <div>
               <h1 style="color: white">Projects</h1>
               <div class="short-divider" style="background-color: var(--purple)"></div>
-              <h3 style="color: white">Since many of my projects are with government clients, I can't show all work publicly. Shoot me an <a href="mailto:emporat@gmail.com" target="_blank">email</a> for more details + case studies.</h3>
+              <h3 style="color: white">This page is under construction :-)</h3>
             </div>
           </div>
         </div>
       </div>
 
-<div id="projects">
+<!-- <div id="projects">
 
 
-  <!-- Featured project -->
   <div class="section-large" style="background-color: var(--purple);">
     <div class="project-info-large">
       <h4 style="margin-bottom: 10px;">2021 • Deloitte Digital • Health</h4>
@@ -67,7 +66,6 @@
     <img class="project-pic-large" src="pics/EF.png" alt="A screenshot of the HUD style guide">
   </div>
 
-<!-- Featured project -->
   <div class="section-large" style="background-color: var(--pink);">
     <div class="project-info-large">
       <h4 style="margin-bottom: 10px;">2020 • Deloitte Digital • Housing</h4>
@@ -80,7 +78,6 @@
     <img class="project-pic-large" src="pics/FHA_featured.png" alt="A screenshot of the FHA.gov home page">
   </div>
 
-    <!-- Featured project -->
   <div class="section-large" style="background-color: var(--green);">
     <div class="project-info-large">
       <h4 style="margin-bottom: 10px;">2021 • Deloitte Digital • Housing</h4>
@@ -93,7 +90,6 @@
     <img class="project-pic-large" src="pics/HUD_ds.png" alt="A screenshot of the HUD style guide">
   </div>
 
-    <!-- Featured project -->
     <div class="section-large" style="background-color: var(--orange)">
       <div class="project-info-large">
         <h4 style="margin-bottom: 10px;">2019 • Deloitte Digital • Food & Nutrition</h4>
@@ -107,7 +103,6 @@
     </div>
 
 
-    <!-- Featured project -->
     <div class="section-large" style="background-color: var(--purple);">
       <div class="project-info">
         <h4 style="margin-bottom: 10px;">Summer 2018 • Deloitte Digital</h4>
@@ -120,7 +115,6 @@
       <img src="pics/l&d-proj.png" class="project-pic-large" alt="A screenshot of a Deloitte Digital site called the Learning and Development portal">
     </div>
 
-    <!-- Featured project -->
     <div class="section-large" style="background-color: var(--orange);">
       <div class="project-info">
         <h4 style="margin-bottom: 10px;">Fall 2018 • Carnegie Mellon University</h4>
@@ -134,7 +128,7 @@
     </div>
 
 
-</div>
+</div> -->
 
       
       <div id="footer"></div>
