remove projects for now

--- a/index.html
+++ b/index.html
@@ -49,9 +49,6 @@ $('#footer').load('http://emilyporat.com/footer.html');
               <h4 style="color: black">UX Designer • Washington DC</h4>
               <h1 style="color: white">Emily Porat</h1>
               <h2 style="margin-bottom: 10px">I'm an end-to-end designer who excels at creating order from chaos</h2>
-
-              <button class="secondary-btn" style="margin-right: 10px"  onclick="location.href='projects.html';" value="View my work"; target="_blank">View my Work</button>
-              <button class="btn" onclick="slideDown()" value="Scroll down">Learn More <i class="fa fa-long-arrow-alt-down"></i></button>
               
             </div>
           </div>
@@ -62,7 +59,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
       </div>
 
 
-  <div class="full-width" id="summary" style="background-color: var(--purple); margin-top: 0px; margin-bottom: 0px; height: 95vh">
+  <!-- <div class="full-width" id="summary" style="background-color: var(--purple); margin-top: 0px; margin-bottom: 0px; height: 95vh">
     <div class="title-wrapper animate-reveal animate-first" style="height: 95vh">
       <div class="title">
         <div>
@@ -102,7 +99,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
       </div>
     </div>
     <img src="pics/home-background-orange.png" class="big-pic" style="height: 70vh">
-  </div>
+  </div> -->
 
 <div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
 
