--- a/projects.html
+++ b/projects.html
@@ -39,13 +39,13 @@
       <div id="nav"></div>
       <div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
 
-      <div class="full-width" style="background-color: var(--mediumgray); height: 60vh">
+      <div class="full-width" style="background-color: white; height: 60vh">
         <div class="title-wrapper animate-reveal animate-first" style="height: 60vh">
           <div class="title">
             <div>
-              <h1 style="color: white">Projects</h1>
+              <h1>Projects</h1>
               <div class="short-divider" style="background-color: var(--purple)"></div>
-              <h3 style="color: white">This page is under construction :-)</h3>
+              <h3>This page is under construction :-)</h3>
             </div>
           </div>
         </div>
