changed home headline

--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
         <div class="title-wrapper animate-reveal animate-first" style="height: 95vh">
           <div class="title" style="width: 55%">
             <div>
-              <h4 style="color: black">Emily Porat</h4>
-              <h1 style="color: white">Product Designer</h1>
-              <h2 style="margin-bottom: 10px">I'm an end-to-end designer who is passionate about creating order from chaos</h2>
+              <h1 style="margin-bottom: 10px">I'm an end-to-end Product Designer who is passionate about creating order from chaos</h1>
               
             </div>
           </div>
