changed home headline

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@ $('#footer').load('http://emilyporat.com/footer.html');
         <div class="title-wrapper animate-reveal animate-first" style="height: 95vh">
           <div class="title" style="width: 55%">
             <div>
-              <h1 style="margin-bottom: 10px">I'm an end-to-end Product Designer who is passionate about creating order from chaos</h1>
+              <h1 style="color: white">Hi, I'm Emily!</h1>
+              <h2 style="margin-bottom: 10px">I'm an end-to-end Product Designer who is passionate about creating order from chaos.</h2>
               
             </div>
           </div>
