changed UX to Product in footer

--- a/footer.html
+++ b/footer.html
@@ -2,7 +2,7 @@
   
   <div id="container">
     <div class="contact-text" style="margin: 0">
-      <h4 style="color: white;">UX Designer</h4>
+      <h4 style="color: white;">Product Designer</h4>
       <h2 style="color: var(--purple);">Emily Porat</h2> 
     </div>
 
