simplified, updated type styles, remove projects page from nav

--- a/health-nonprofit.html
+++ b/health-nonprofit.html
@@ -39,7 +39,7 @@
 		<div class="title-wrapper animate-reveal animate-first">
 			<div class="title">
 				<div>
-					<h4>2021 • Deloitte Digital • Health</h4>
+					<h4 style="margin-bottom: 10px">2021 • Deloitte Digital • Health</h4>
 					<h1 style="color: black">Health Nonprofit Discovery</h1>
 					<p class="p-XL">I evaluated the overarching user experience of a nonprofit's website and provided strategic recommendations that fed into a product roadmap and vision.</p>
 				</div>
