--- a/index.html
+++ b/index.html
@@ -42,63 +42,49 @@ $('#footer').load('http://emilyporat.com/footer.html');
 <meta name="viewport" content="width=device-width">
 <div id="nav"></div>
 
-      <div class="full-width" style="background-color: var(--green); margin-bottom: 0; height: 95vh">
-        <div class="title-wrapper animate-reveal animate-first" style="height: 95vh">
-          <div class="title" style="width: 55%">
+      <div class="full-width" style="background-color: var(--white); margin-bottom: 0; height: 95vh">
+        <div class="title-wrapper animate-reveal animate-first" style="height: 95vh;">
+          <div class="home-title">
             <div>
-              <h1 style="color: white">Hi, I'm Emily!</h1>
-              <h2 style="margin-bottom: 10px">I'm an end-to-end Product Designer who is passionate about creating order from chaos.</h2>
+              <h4 style="margin-bottom: 20px; text-align: center;">The Design Portfolio of</h4>
+              <h1 style="text-align: center; margin-bottom: 20px; color: var(--purple)">Emily Porat</h1>
+              <p style="margin-bottom: 10px; text-align: center">Senior Product Designer at Orchard designing efficient real estate management tools for internal teams.</p>
               
             </div>
           </div>
         </div>
  
-        <img src="pics/home-background.png" class="big-pic" style="height: 95vh">
+        <!-- <img src="pics/home-background.png" class="big-pic" style="height: 95vh"> -->
 
       </div>
 
+<div id="projects">
 
-  <!-- <div class="full-width" id="summary" style="background-color: var(--purple); margin-top: 0px; margin-bottom: 0px; height: 95vh">
-    <div class="title-wrapper animate-reveal animate-first" style="height: 95vh">
-      <div class="title">
-        <div>
-          <h4>Work</h4>
-          <h2>I work at Deloitte Digital, where I improve digital experiences for government & nonprofit clients.</h2>
-          <p class="p-XL">I'm a design generalist who loves every part of the process, from research to UI. I focus more on the early stages so we save time + money at the end of the day.</p>
-          <button class="secondary-btn" onclick="location.href='projects.html';" value="View my work"; target="_blank">View my Work</button>
-        </div>
-      </div>
+  <div class="section-large" style="background-color: var(--white)">  
+    <div class="project-info-large">
+      <h4 style="margin-bottom: 10px;">2022 • Orchard • Real estate</h4>
+      <h3>Renovation service tooling</h3>
+      <p>Designed an interface for creating renovation plans and sending contracts + invoices.</p>
+      <button id="myBtn" class="secondary-btn" onclick="location.href='concierge.html';" value="Go to renovation tool project page">
+        <h4>Learn More</h4>
+      </button>
     </div>
-    <img src="pics/home-img.png" class="big-pic" style="height: 95vh">
+    <img class="project-pic-large" src="pics/concierge.png" alt="A screenshot of the HUD style guide">
   </div>
 
-
-  <div class="full-width" style="background-color: var(--pink); margin-top: 0px; margin-bottom: 0px; height: 95vh">
-    <div class="title-wrapper animate-reveal animate-first" style="height: 95vh">
-      <div class="title">
-        <div>
-          <h4>Philosophy</h4>
-          <h2>My design process isn't an exact science, but it is scientific.</h2>
-          <p class="p-XL">I view every design concept as a hypothesis waiting to be tested. Spreadsheets and pro-con lists are my secret weapons when it comes to organizing and synthesizing complexity - which is what I do best.</p>
-          <button class="secondary-btn"  onclick="location.href='about.html';" value="More about me"; target="_blank">More About Me</button>
-        </div>
-      </div>
+  <div class="section-large" style="background-color: var(--white)">  
+    <div class="project-info-large">
+      <h4 style="margin-bottom: 10px;">2021 • Deloitte Digital • Health</h4>
+      <h3>Health Nonprofit Discovery</h3>
+      <p>Evaluated the overarching user experience of a nonprofit's website and provided strategic recommendations that fed into a product roadmap and vision.</p>
+      <button id="myBtn" class="secondary-btn" onclick="location.href='health-nonprofit.html';" value="Go to health nonprofit Discovery project page">
+        <h4>Learn More</h4>
+      </button>
     </div>
-    <img src="pics/about-section-img.png" class="big-pic" style="height: 95vh">
+    <img class="project-pic-large" src="pics/EF.png" alt="A screenshot of the HUD style guide">
   </div>
+</div>  
 
-  <div class="full-width" style="background-color: var(--orange); margin-top: 0px; margin-bottom: 0px; height: 70vh">
-    <div class="title-wrapper animate-reveal animate-first" style="height: 70vh">
-      <div style="width: 50%" class="title">
-        <div>
-          <h4>Get in touch</h4>
-          <h2>Want to chat? Connect with me on <a style="color:white" href="https://www.linkedin.com/in/emilyporat/" target="_blank">LinkedIn</a> or shoot me an email.</h2>
-          <button class="secondary-btn" onclick="location.href='mailto:emporat@gmail.com';" value="Send me an email"; target="_blank">Email Me</button>
-        </div>
-      </div>
-    </div>
-    <img src="pics/home-background-orange.png" class="big-pic" style="height: 70vh">
-  </div> -->
 
 <div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
 
