--- a/footer.html
+++ b/footer.html
@@ -3,7 +3,7 @@
   <div id="container">
     <div class="contact-text" style="margin: 0">
       <h4 style="color: white;">Product Designer</h4>
-      <h1 style="color: var(--purple);">Emily Porat</h1> 
+      <h1 style="color: var(--purple); font-size: 3rem">Emily Porat</h1> 
     </div>
 
     <div id="footer-links">
@@ -25,5 +25,5 @@
   </div>
   </div>
 <!--   <a href="index.html" style="float: left"><img src="pics/logo-white.svg" class="nav-logo"></a> -->
-  <p id="copyright">© Emily Porat 2021</p>
+  <p id="copyright">© Emily Porat 2022</p>
 </div>
