tweaked home intro text

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
             <div>
               <h4 style="margin-bottom: 20px; text-align: center;">The Design Portfolio of</h4>
               <h1 style="text-align: center; margin-bottom: 20px; color: var(--purple)">Emily Porat</h1>
-              <p style="margin-bottom: 10px; text-align: center">Senior Product Designer at Orchard designing efficient real estate management tools for internal teams.</p>
+              <p class=p-XL style="margin-bottom: 10px; text-align: center">Senior Product Designer at <a style="color: black" href="https://orchard.com/">Orchard</a> designing efficient real estate workflow tools for internal teams.</p>
               
             </div>
           </div>
@@ -64,7 +64,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
     <div class="project-info-large">
       <h4 style="margin-bottom: 10px;">2022 • Orchard • Real estate</h4>
       <h3>Renovation service tooling</h3>
-      <p>Designed an interface for creating renovation plans and sending contracts + invoices.</p>
+      <p>Designed an interface for creating renovation plans and sending smart contracts + invoices.</p>
       <button id="myBtn" class="secondary-btn" onclick="location.href='concierge.html';" value="Go to renovation tool project page">
         <h4>Learn More</h4>
       </button>
