--- a/fms-pos.html
+++ b/fms-pos.html
@@ -37,8 +37,7 @@
 
 	<div id="modal_background">
 		<div id="prompt" class="pw_prompt">
-			<h3>Federal Food Management System</h3>
-			<p>👋 Hey there! I can't talk about this project publicly, so shoot me an <a href="mailto:emporat@gmail.com" target="_blank">email</a> if you'd like to learn more.</p>
+			<h4 style="margin-bottom: 20px">Password protected project</h4>
 			<label>Password:</label>
 			<input id="pw_prompt_input1" type="password"></input>
 			<button class="secondary-btn" onclick="checkPassword()">Submit</button>
@@ -50,14 +49,14 @@
 		<div class="title-wrapper animate-reveal animate-first">
 			<div class="title">
 				<div>
-					<h4>2019 • Deloitte Digital • Food & Nutrition</h4>
-					<h1>Food Management System</h1>
-					<p class="p-XL">I redesigned key features of the interface that government workers use to provide food to nearly 100,000 low-income individuals.<p>
+					<h4>Deloitte Digital • 2019</h4>
+					<h1>Food management system</h1>
+					<p class="p-XL">Redesigned key features of the interface that USDA government workers use to provide food to nearly 100,000 low-income individuals.<p>
 				</div>
 			</div>
 		</div>
 
-		<img src="pics/pos-small.png" class="big-pic">
+		<!-- <img src="pics/pos-small.png" class="big-pic"> -->
 	</div>
 
 	<div class="panel">
