--- a/health-nonprofit.html
+++ b/health-nonprofit.html
@@ -39,14 +39,14 @@
 		<div class="title-wrapper animate-reveal animate-first">
 			<div class="title">
 				<div>
-					<h4 style="margin-bottom: 10px">2021 • Deloitte Digital • Health</h4>
-					<h1 style="color: black">Health Nonprofit Discovery</h1>
-					<p class="p-XL">I evaluated the overarching user experience of a nonprofit's website and provided strategic recommendations that fed into a product roadmap and vision.</p>
+					<h4 style="margin-bottom: 10px">Deloitte Digital • 2021</h4>
+					<h1 style="color: black">Research and roadmapping</h1>
+					<p class="p-XL">Evaluated the overarching user experience of a nonprofit's website and provided strategic recommendations that fed into a product roadmap and vision.</p>
 				</div>
 			</div>
 		</div> 
 
-		<img src="pics/EF.png" class="big-pic">
+		<!-- <img src="pics/EF.png" class="big-pic"> -->
 	</div>
 
 
