--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
             </div>
           </div>
         </div>
+
  
         <!-- <img src="pics/home-background.png" class="big-pic" style="height: 95vh"> -->
 
@@ -62,27 +63,35 @@ $('#footer').load('http://emilyporat.com/footer.html');
 
   <div class="section-large" style="background-color: var(--white)">  
     <div class="project-info-large">
-      <h4 style="margin-bottom: 10px;">2022 • Orchard • Real estate</h4>
-      <h3>Renovation service tooling</h3>
-      <p>Designed an interface for creating renovation plans and sending smart contracts + invoices.</p>
-      <button id="myBtn" class="secondary-btn" onclick="location.href='concierge.html';" value="Go to renovation tool project page">
-        <h4>Learn More</h4>
-      </button>
+      <h4 style="margin-bottom: 15px;">Orchard • 2022</h4>
+      <h3>Home renovation planning & contract tool</h3>
+      <p>Designed a workflow for scoping out home renovation projects, generating smart contracts, and sending invoices.</p>
+      <p><a href="concierge.html">Learn more →</a></p>
     </div>
     <img class="project-pic-large" src="pics/concierge.png" alt="A screenshot of the HUD style guide">
   </div>
 
   <div class="section-large" style="background-color: var(--white)">  
     <div class="project-info-large">
-      <h4 style="margin-bottom: 10px;">2021 • Deloitte Digital • Health</h4>
-      <h3>Health Nonprofit Discovery</h3>
-      <p>Evaluated the overarching user experience of a nonprofit's website and provided strategic recommendations that fed into a product roadmap and vision.</p>
-      <button id="myBtn" class="secondary-btn" onclick="location.href='health-nonprofit.html';" value="Go to health nonprofit Discovery project page">
-        <h4>Learn More</h4>
-      </button>
+      <h4 style="margin-bottom: 15px;">Deloitte Digital • 2021</h4>
+      <h3>User research & product roadmapping</h3>
+      <p>Evaluated the overarching user experience of a nonprofit client's website and provided strategic recommendations that fed into a product roadmap and vision.</p>
+      <p><a href="health-nonprofit.html">Learn more →</a></p>
     </div>
     <img class="project-pic-large" src="pics/EF.png" alt="A screenshot of the HUD style guide">
   </div>
+
+
+    <div class="section-large" style="background-color: var(--white)">
+      <div class="project-info-large">
+        <h4 style="margin-bottom: 10px;">Deloitte Digital • 2019</h4>
+        <h3>Inventory management system</h3>
+        <p>Designed the inventory management & point of sale system that a government client uses to distribute food to nearly 100,000 low-income individuals.</p>
+        <p><a href="fms-pos.html">Learn more →</a></p>
+      </div>
+      <img class="project-pic-large" src="pics/pos-small.png" alt="A screenshot of a point of sale system on a Salesforce desktop interface and an iPad interface">
+    </div>
+
 </div>  
 
 
