updated about color

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
       <div id="nav"></div>
       <div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
 
-      <div class="full-width" style="background-color: var(--mediumgray); height: 60vh">
+      <div class="full-width" style="background-color: var(--purple); height: 60vh">
         <div class="title-wrapper animate-reveal animate-first" style="height: 60vh">
           <div class="title">
             <div>
