--- a/health-nonprofit.html
+++ b/health-nonprofit.html
@@ -35,7 +35,7 @@
 	<div id="nav"></div>
 	<div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>	
 
-	<div class="full-width" style="background-color: var(--purple);">
+	<div class="full-width" style="background-color: #317CD7;">
 		<div class="title-wrapper animate-reveal animate-first">
 			<div class="title">
 				<div>
@@ -46,7 +46,7 @@
 			</div>
 		</div> 
 
-		<!-- <img src="pics/EF.png" class="big-pic"> -->
+<!-- 		<img src="pics/EF.png" class="big-pic"> -->
 	</div>
 
 
