--- a/index.html
+++ b/index.html
@@ -64,14 +64,24 @@ $('#footer').load('http://emilyporat.com/footer.html');
   <div class="section-large" style="background-color: var(--white)">  
     <div class="project-info-large">
       <h4 style="margin-bottom: 15px;">Orchard • 2022</h4>
-      <h3>Home renovation planning & contract tool</h3>
-      <p>Designed a workflow for scoping out home renovation projects, generating smart contracts, and sending invoices.</p>
-      <p><a href="concierge.html">Learn more →</a></p>
+      <h3>Product roadmap</h3>
+      <p>Collaborated with product to define a vision and roadmap for a more tightly integrated platform product following the acqusition of a smaller company.</p>
+      <p><a href="orchard-roadmap.html">Learn more →</a></p>
     </div>
-    <img class="project-pic-large" src="pics/concierge.png" alt="A screenshot of the HUD style guide">
+    <img class="project-pic-large" src="pics/EF.png">
   </div>
 
   <div class="section-large" style="background-color: var(--white)">  
+    <div class="project-info-large">
+      <h4 style="margin-bottom: 15px;">Orchard • 2022</h4>
+      <h3>Concierge</h3>
+      <p>Designed product support for Orchard's "Concierge" renovation program — including project planning, generating smart contracts, and sending invoices.</p>
+      <p><a href="concierge.html">Learn more →</a></p>
+    </div>
+    <img class="project-pic-large" src="pics/concierge.png">
+  </div>
+
+<!--   <div class="section-large" style="background-color: var(--white)">  
     <div class="project-info-large">
       <h4 style="margin-bottom: 15px;">Deloitte Digital • 2021</h4>
       <h3>User research & product roadmapping</h3>
@@ -79,10 +89,10 @@ $('#footer').load('http://emilyporat.com/footer.html');
       <p><a href="health-nonprofit.html">Learn more →</a></p>
     </div>
     <img class="project-pic-large" src="pics/EF.png" alt="A screenshot of the HUD style guide">
-  </div>
+  </div> -->
 
 
-    <div class="section-large" style="background-color: var(--white)">
+<!--     <div class="section-large" style="background-color: var(--white)">
       <div class="project-info-large">
         <h4 style="margin-bottom: 10px;">Deloitte Digital • 2019</h4>
         <h3>Inventory management system</h3>
@@ -90,7 +100,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
         <p><a href="fms-pos.html">Learn more →</a></p>
       </div>
       <img class="project-pic-large" src="pics/pos-small.png" alt="A screenshot of a point of sale system on a Salesforce desktop interface and an iPad interface">
-    </div>
+    </div> -->
 
 </div>  
 
