--- a/concierge.html
+++ b/concierge.html
@@ -74,8 +74,13 @@
 
 				<div class="context-specifics">
 					<div class="context-description">
-						<h4>Length</h4>
-						<p>Oct 2022 (start) — Jan 2023 (release)</p>
+						<h4>Start date</h4>
+						<p>Oct 2022</p>
+					</div>
+
+					<div class="context-description">
+						<h4>Release date</h4>
+						<p>Jan 2023</p>
 					</div>
 					
 					<div class="context-description">
@@ -90,7 +95,7 @@
 				<p>
 					<ul>
 						<li>Orchard offers streamlined services and tooling for consumers looking to buy and/or sell their home.</li>
-						<li>The Concierge program is Orchard's renovation service for customers who want to make minor improvements to their home before selling in order to increase list price and decrease days on market.</li>
+						<li>The Concierge program is Orchard's renovation service for customers who want to make improvements to their home before selling in order to increase list price and decrease days on market.</li>
 					</ul>
 				</p>
 
@@ -101,8 +106,8 @@
 				<p>
 					<ul>
 						<li>Renovation Leads (RLs) are the main user group — they are internal Orchard employees who manage renovation projects, including scoping out the work to be done, sending contracts to customers, and ensuring the work is completed. RLs spend roughly 60% of their time in the field, visiting job sites, and 40% of their time doing computer work.</li>
-						<li>Previously, RLs had to manually generate contracts and were using their own hacky spreadsheets and notes docs to write out scopes of work.</li>
-						<li>This project enabled Renovation Leads to generate and send smart contracts to customers and track the status of those contracts. We also introduced the ability to generate invoices for the Concierge Coordinator.</li>
+						<li>Previously, RLs had to manually create contracts and were using their own hacky spreadsheets and notes docs to write out scopes of work.</li>
+						<li>This project enabled Renovation Leads to generate and send smart contracts to customers via the product and track the status of those contracts. We also introduced the ability to generate invoices once the work is complete.</li>
 					</ul>
 				</p>
 
@@ -127,6 +132,10 @@
 
 	<div class="full-width-mid-page">
 		<div class="panel dark" style="text-align: center; background-color: #31334C">
+			<div class="mid-panel-text-top">
+				<h2>Primary flow</h2>	
+				<p>Sending a contract to a customer</p>			
+			</div>
 			<img class="pic-left" src="pics/concierge-review.png">
 		</div>
 	</div>
