updated concierge and roadmap projects

--- a/fms-pos.html
+++ b/fms-pos.html
@@ -45,18 +45,18 @@
 	</div>
 
 
-	<div class="full-width" style="background-color: var(--orange);">
+	<div class="full-width" style="background-color: #57C586;">
 		<div class="title-wrapper animate-reveal animate-first">
 			<div class="title">
 				<div>
-					<h4>Deloitte Digital • 2019</h4>
+					<h4>Deloitte Digital • 2020</h4>
 					<h1>Food management system</h1>
 					<p class="p-XL">Redesigned key features of the interface that USDA government workers use to provide food to nearly 100,000 low-income individuals.<p>
 				</div>
 			</div>
 		</div>
 
-		<!-- <img src="pics/pos-small.png" class="big-pic"> -->
+		<img src="pics/pos-small.png" class="big-pic">
 	</div>
 
 	<div class="panel">
