--- a/index.html
+++ b/index.html
@@ -63,23 +63,24 @@ $('#footer').load('http://emilyporat.com/footer.html');
 
   <div class="section-large" style="background-color: var(--white)">  
     <div class="project-info-large">
-      <h4 style="margin-bottom: 15px;">Orchard • 2022</h4>
-      <h3>Product roadmap</h3>
-      <p>Collaborated with product to define a vision and roadmap for a more tightly integrated platform product following the acqusition of a smaller company.</p>
-      <p><a href="orchard-roadmap.html">Learn more →</a></p>
-    </div>
-    <img class="project-pic-large" src="pics/EF.png">
-  </div>
-
-  <div class="section-large" style="background-color: var(--white)">  
-    <div class="project-info-large">
-      <h4 style="margin-bottom: 15px;">Orchard • 2022</h4>
+      <h4 style="margin-bottom: 15px;">Orchard • 2022 • Research & Design</h4>
       <h3>Concierge</h3>
       <p>Designed product support for Orchard's "Concierge" renovation program — including project planning, generating smart contracts, and sending invoices.</p>
       <p><a href="concierge.html">Learn more →</a></p>
     </div>
     <img class="project-pic-large" src="pics/concierge.png">
   </div>
+
+  <div class="section-large" style="background-color: var(--white)">  
+    <div class="project-info-large">
+      <h4 style="margin-bottom: 15px;">Orchard • 2022 • Vision & Strategy</h4>
+      <h3>Product roadmap</h3>
+      <p>Collaborated with product to define a UX vision for a more tightly integrated platform product and a 2023 product roadmap.</p>
+      <p><a href="orchard-roadmap.html">Learn more →</a></p>
+    </div>
+    <img class="project-pic-large" src="pics/roadmap.png">
+  </div>
+
 
 <!--   <div class="section-large" style="background-color: var(--white)">  
     <div class="project-info-large">
@@ -92,15 +93,15 @@ $('#footer').load('http://emilyporat.com/footer.html');
   </div> -->
 
 
-<!--     <div class="section-large" style="background-color: var(--white)">
+    <div class="section-large" style="background-color: var(--white)">
       <div class="project-info-large">
-        <h4 style="margin-bottom: 10px;">Deloitte Digital • 2019</h4>
+        <h4 style="margin-bottom: 10px;">Deloitte Digital • 2020</h4>
         <h3>Inventory management system</h3>
         <p>Designed the inventory management & point of sale system that a government client uses to distribute food to nearly 100,000 low-income individuals.</p>
         <p><a href="fms-pos.html">Learn more →</a></p>
       </div>
       <img class="project-pic-large" src="pics/pos-small.png" alt="A screenshot of a point of sale system on a Salesforce desktop interface and an iPad interface">
-    </div> -->
+    </div>
 
 </div>  
 
