--- a/concierge.html
+++ b/concierge.html
@@ -36,14 +36,14 @@
 	<div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
 
 
-<!-- 	<div id="modal_background">
+	<div id="modal_background">
 		<div id="prompt" class="pw_prompt">
 			<h4 style="margin-bottom: 20px">Password protected project</h4>
 			<label>Password:</label>
 			<input id="pw_prompt_input1" type="password"></input>
 			<button class="secondary-btn" onclick="checkPassword()">Submit</button>
 		</div>
-	</div> -->
+	</div>
 
 
 	<div class="full-width" style="background-color: #31334C; color: white">
