--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
 
     <div class="section-large" style="background-color: var(--white)">
       <div class="project-info-large">
-        <h4 style="margin-bottom: 10px;">Deloitte Digital • 2020</h4>
+        <h4 style="margin-bottom: 10px;">Deloitte Digital • 2020 • Research & Design</h4>
         <h3>Inventory management system</h3>
         <p>Designed the inventory management & point of sale system that a government client uses to distribute food to nearly 100,000 low-income individuals.</p>
         <p><a href="fms-pos.html">Learn more →</a></p>
