--- a/about.html
+++ b/about.html
@@ -37,8 +37,8 @@
       <div id="nav"></div>
       <div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
 
-      <div class="full-width" style="background-color: var(--purple); height: 60vh">
-        <div class="title-wrapper animate-reveal animate-first" style="height: 60vh">
+<!--       <div class="full-width" style="background-color: var(--purple); height: 60vh">
+        <div class="title-wrapper animate-reveal animate-first" style="height: 60vh;">
           <div class="title">
             <div>
               <h1 style="color: white; margin-bottom: 20px">About</h1>
@@ -47,15 +47,17 @@
           </div>
         </div>
 
-        <img src="pics/about/emily4.png" class="big-pic" style="height: 60vh">
+        <img src="pics/about/emily4.png" class="big-pic" style="height: 60vh; width: auto">
 
-      </div>
+      </div> -->
 
-      <div class="panel">
+      <div class="panel" style="padding-top: 10%">
+
         <div class="body right">
         <div class="context-summary">
+          <h1 style="color: var(--purple); margin-bottom: 20px">About Emily</h1>
           <p class="p-XL">
-            I do a little bit of everything design-wise, but I am most drawn towards the synthesis, organizational, and problem-solving elements of UX. I like making sense of things. I like spreadsheets. My fridge is color-coded (jk, but you get the picture).
+            I do a little bit of everything design-wise, but I am most drawn towards the synthesis, organizational, and problem-solving elements of UX. 
           </p>
 
           <div  class="space"></div>
