--- a/concierge.html
+++ b/concierge.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Emily Porat | Concierge redesign</title>
+	<title>Emily Porat | Concierge</title>
 	<link rel="stylesheet" type="text/css" href="styles/global.css">
 	<link rel="stylesheet" type="text/css" href="styles/global-mobile.css">
 	<link rel="stylesheet" type="text/css" href="styles/nav.css">
