--- a/orchard-roadmap.html
+++ b/orchard-roadmap.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Emily Porat | Orchard product roadmap</title>
+	<title>Emily Porat | Product roadmap</title>
 	<link rel="stylesheet" type="text/css" href="styles/global.css">
 	<link rel="stylesheet" type="text/css" href="styles/global-mobile.css">
 	<link rel="stylesheet" type="text/css" href="styles/nav.css">
