Concierge project updates

--- a/concierge.html
+++ b/concierge.html
@@ -116,7 +116,7 @@
 				<div class="space"></div>
 
 				<H2>Problem statement</H2>
-				<p>Internal tooling has not improved as the Concierge program has grown in importance. Many workflows are still being done manually, which has resulted in operational inefficiency and financial misses due to human error.</p>
+				<p>Internal tooling has not improved as the Concierge program has grown in importance. Many workflows are still being done manually, which has resulted in operational inefficiency and financial losses due to human error.</p>
 
 <!--             <div class="so-what" style="background-color: rgba(160, 97, 213, .2); border-left: 10px solid var(--purple); ">
         		<h4>Problem statement</h4>
