Roadmap proj updates

--- a/orchard-roadmap.html
+++ b/orchard-roadmap.html
@@ -112,6 +112,13 @@
 						<li>Our engineering counterparts also provided a technical vision to go along with the product roadmap.</li>
 					</ul>
 				</p>
+
+
+            <div class="so-what" style="background-color: rgba(160, 97, 213, .2); border-left: 10px solid var(--purple); ">
+        		<h4>Want the full case study?</h4>
+        		<p>Please <a href="mailto:emporat@gmail.com" target="_top">reach out directly</a> and I can share more details.</p>
+        	</div> 
+
 			</div>
 
 		</div>
