updated concierge page

--- a/concierge.html
+++ b/concierge.html
@@ -36,14 +36,14 @@
 	<div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
 
 
-<!-- 	<div id="modal_background">
+	<div id="modal_background">
 		<div id="prompt" class="pw_prompt">
 			<h4 style="margin-bottom: 20px">Password protected project</h4>
 			<label>Password:</label>
 			<input id="pw_prompt_input1" type="password"></input>
 			<button class="secondary-btn" onclick="checkPassword()">Submit</button>
 		</div>
-	</div> -->
+	</div>
 
 
 	<div class="full-width" style="background-color: #31334C; color: white">
@@ -93,37 +93,40 @@
 				<div class="space"></div>
 
 				<h2>Background</h2>
-				<h3>About Orchard</h3>
-				<p>
-					<ul>
-						<li>Orchard offers streamlined services and tooling for consumers looking to buy and/or sell their home.</li>
-						<li>The Concierge program is Orchard's renovation service for customers who want to make improvements to their home before selling in order to increase list price and decrease days on market.</li>
-					</ul>
+				<p> Orchard offers streamlined services and tooling for consumers looking to buy and/or sell their home. The Concierge program is Orchard's renovation service for customers who want to make improvements to their home before selling in order to increase list price and decrease days on market.
 				</p>
 
 				<div class="space"></div>
 
 				<h3>Why invest in Concierge?</h3>
 				<p>
+					Concierge is important to Orchard's business for two main reasons:
 					<ul>
-						<li>Concierge is important to Orchard's business for two main reasons:</li>
-							<li style="margin-left:25px">It drives conversion and sets Orchard apart from its competitors, especially in a buyer's market when selling is tougher.</li>
-							<li style="margin-left:25px">Orchard introduced a 35% Concierge program fee and asset management fees in late 2022, which contribute to overall profitability.</li>
-						<li>It's also a popular program; Concierge attach rates doubled from 20% in 2021 to 40% in 2022. </li>
+							<li>It drives conversion and sets Orchard apart from its competitors, especially in a buyer's market when selling is tougher.</li>
+							<li>Orchard introduced a 35% Concierge program fee and asset management fees in late 2022, which contribute to overall profitability.</li>
 					</ul>
+					<p>It's also a popular program; Concierge attach rates doubled from 20% in 2021 to 40% in 2022.</p>
 				</p>
 
 				<div class="space"></div>
 
+		</div>
+	</div>
+
+	<div class="divider" style="background-color: var(--purple)"></div>
+	
+	<div class="panel">
+		<div class="body right">
 				<H2>Problem statement</H2>
-				<p>Internal tooling has not improved as the Concierge program has grown in importance. Many workflows are still being done manually, which has resulted in operational inefficiency and financial losses due to human error.</p>
+				<p class="p-XL">Internal tooling has not improved as the Concierge program has grown in importance. Many workflows are still being done manually, which has resulted in operational inefficiency and financial losses due to human error.</p>
+		</div>
 
-<!--             <div class="so-what" style="background-color: rgba(160, 97, 213, .2); border-left: 10px solid var(--purple); ">
-        		<h4>Problem statement</h4>
-        		<p>Internal tooling has not improved as the Concierge program has grown in importance. Many workflows are still being done manually, which has resulted in operational inefficiency and financial misses due to human error.</p>
-        	</div>  -->
+	</div>
 
-				<div class="space"></div>
+	<div class="divider" style="background-color: var(--purple)"></div>
+
+	<div class="panel">
+		<div class="body right">
 
 				<h2>The project</h2>
 
@@ -137,10 +140,8 @@
 
 				<div class="space"></div>
 
-
 				<h3>Project scope</h3>
-				<p>To define project scope, A PM and I conducted user research initially and consulted with stakeholders throughout to ensure we were solving the right problems. 
-				<p>We streamlined the existing contract-sending tool and added net-new functionality to:</p>
+				<p>To define project scope, A PM and I conducted user research initially and consulted with stakeholders throughout to ensure we were solving the right problems. We streamlined the existing contract-sending tool and added net-new functionality to:</p>
 					<ul>
 						<li>Send contract amendments when the project changes</li>
 						<li>View contract statuses and a summary of key details</li>
@@ -149,14 +150,14 @@
 				</p>
 
 				<div class="space"></div>
-				
+
 				<h3>Outcome</h3>
 				<p>
 					The new & improved Concierge feature launched in Jan 2023 and was received very well. 
 					<ul>
-						<li><b style="font-weight: 1000">Operational efficiency</b> — 100% of RLs polled post-launch said that the new product enabled them to do their job more efficiently.</li>
-						<li><b style="font-weight: 1000">Accuracy</b> — Providing product support for smart contract, amendment, and invoice generation reduces manual data entry and will result in fewer financial misses.</li>
-						<li><b style="font-weight: 1000">Conversion + profitability</b> —  RLs can now focus on selling Concierge and providing a better customer experience and less time dealing with inadequate tooling.</li>
+						<li>Operational efficiency — 100% of RLs polled post-launch said that the new product enabled them to do their job more efficiently.</li>
+						<li>Accuracy — Providing product support for smart contract, amendment, and invoice generation reduces manual data entry and will result in fewer financial misses.</li>
+						<li>Conversion + profitability —  RLs can now focus on selling Concierge and providing a better customer experience and less time dealing with inadequate tooling.</li>
 					</ul>
 					 
 				</p>
@@ -173,6 +174,7 @@
 
 		</div>
 	</div>
+
 
 	<div class="full-width-mid-page">
 		<div class="panel dark" style="text-align: center; background-color: #31334C">
