--- a/orchard-roadmap.html
+++ b/orchard-roadmap.html
@@ -113,6 +113,7 @@
 					</ul>
 				</p>
 
+				<div class="space"></div>
 
             <div class="so-what" style="background-color: rgba(160, 97, 213, .2); border-left: 10px solid var(--purple); ">
         		<h4>Want the full case study?</h4>
