--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
 
       </div> -->
 
-      <div class="panel" style="padding-top: 10%">
+      <div class="panel" style="padding-top: 15%; padding-bottom: 5%">
 
         <div class="body right">
         <div class="context-summary">
