updated pw prompt

--- a/fms-pos.html
+++ b/fms-pos.html
@@ -37,10 +37,11 @@
 
 	<div id="modal_background">
 		<div id="prompt" class="pw_prompt">
-			<h4 style="margin-bottom: 20px">Password protected project</h4>
-			<label>Password:</label>
-			<input id="pw_prompt_input1" type="password"></input>
-			<button class="secondary-btn" onclick="checkPassword()">Submit</button>
+		<label>Enter a password to view project:</label>
+			<div>
+				<input style="display: inline; margin-bottom: 0px; vertical-align:middle;" id="pw_prompt_input1" type="password"></input>
+				<button style="display: inline; vertical-align:middle;" class="secondary-btn" onclick="checkPassword()">Submit</button>		
+			</div>
 		</div>
 	</div>
 
