added back FHA case study

--- a/fha.html
+++ b/fha.html
@@ -35,13 +35,23 @@
 	<div id="nav"></div>
 	<div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>	
 
-	<div id="modal_background">
+<!-- 	<div id="modal_background">
 		<div id="prompt" class="pw_prompt">
 			<h3>Federal Website Redesign</h3>
-			<p>👋 Hey there! I can't talk about this project publicly, so shoot me an <a href="mailto:emporat@gmail.com" target="_blank">email</a> if you'd like to learn more.</p>
+			<p style="margin-bottom: 30px">👋 Hey there! I can't talk about this project publicly, so shoot me an <a href="mailto:emporat@gmail.com" target="_blank">email</a> if you'd like to learn more.</p>
 			<label>Password:</label>
 			<input id="pw_prompt_input1" type="password"></input>
 			<button class="secondary-btn" onclick="checkPassword()">Submit</button>
+		</div>
+	</div> -->
+
+	<div id="modal_background">
+		<div id="prompt" class="pw_prompt">
+		<label>Enter a password to view project:</label>
+			<div>
+				<input style="display: inline; margin-bottom: 0px; vertical-align:middle;" id="pw_prompt_input1" type="password"></input>
+				<button style="display: inline; vertical-align:middle;" class="secondary-btn" onclick="checkPassword()">Submit</button>		
+			</div>
 		</div>
 	</div>
 
