--- a/fms-pos.html
+++ b/fms-pos.html
@@ -40,7 +40,7 @@
 		<label>Enter a password to view project:</label>
 			<div>
 				<input style="display: inline; margin-bottom: 0px; vertical-align:middle;" id="pw_prompt_input1" type="password"></input>
-				<button style="display: inline; vertical-align:middle;" class="btn" onclick="checkPassword()">Submit</button>		
+				<button style="display: inline; vertical-align:middle;" class="secondary-btn" onclick="checkPassword()">Submit</button>		
 			</div>
 		</div>
 	</div>
