--- a/index.html
+++ b/index.html
@@ -103,6 +103,16 @@ $('#footer').load('http://emilyporat.com/footer.html');
       <img class="project-pic-large" src="pics/pos-small.png" alt="A screenshot of a point of sale system on a Salesforce desktop interface and an iPad interface">
     </div>
 
+  <div class="section-large" style="background-color: var(--white);">
+    <div class="project-info-large">
+      <h4 style="margin-bottom: 10px;">Deloitte Digital • 2020 • Research & Design</h4>
+      <h3>FHA website redesign</h3>
+      <p>Co-led the redesign and launch of a consumer-facing informational site that serves over 8 million single family homeowners. Overhauled both the information architecture and visual design.</p>
+      <p><a href="fha.html">Learn more →</a></p>
+    </div>
+    <img style="background-color: var(--pink)" class="project-pic-large" src="pics/FHA_featured.png" alt="A screenshot of the FHA.gov home page">
+  </div>
+
 </div>  
 
 
