--- a/index.html
+++ b/index.html
@@ -63,6 +63,17 @@ $('#footer').load('http://emilyporat.com/footer.html');
 
   <div class="section-large" style="background-color: var(--white)">  
     <div class="project-info-large">
+      <h4 style="margin-bottom: 15px;">Orchard • 2023 • Research & Design</h4>
+      <h3>Home Shopping</h3>
+      <p>Consolidated existing tooling into a net-new dashboard to better support Orchard’s internal agents in providing a great customer experience to clients who are currently looking to buy a home.</p>
+      <p><a href="homeshopping.html">Learn more →</a></p>
+    </div>
+    <img class="project-pic-large" src="pics/homeshopping/hs.png">
+  </div>
+
+
+  <div class="section-large" style="background-color: var(--white)">  
+    <div class="project-info-large">
       <h4 style="margin-bottom: 15px;">Orchard • 2022 • Research & Design</h4>
       <h3>Concierge</h3>
       <p>Designed product support for Orchard's "Concierge" renovation program — including project planning, generating smart contracts, and sending invoices.</p>
