--- a/orchard-roadmap.html
+++ b/orchard-roadmap.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Emily Porat | Product roadmap</title>
+	<title>Emily Porat | Product vision</title>
 	<link rel="stylesheet" type="text/css" href="styles/global.css">
 	<link rel="stylesheet" type="text/css" href="styles/global-mobile.css">
 	<link rel="stylesheet" type="text/css" href="styles/nav.css">
@@ -50,7 +50,7 @@
 			<div class="title">
 				<div>
 					<h4 style="margin-bottom: 10px">Orchard • 2022-23</h4>
-					<h1 style="color: black">Product roadmap</h1>
+					<h1 style="color: black">Product vision</h1>
 					<p class="p-XL">Collaborated with product to define a vision and roadmap for a more tightly integrated platform product.</p>
 				</div>
 			</div>
